farhang irani 1401/02/6 part 1

--- a/src/app/module/dashboard/user-management/user-management.component.html
+++ b/src/app/module/dashboard/user-management/user-management.component.html
@@ -53,3 +53,24 @@
 
   </div>
 </div>
+
+
+<!--<div class="card-table">-->
+<!--  <div class="card-header-table">-->
+<!--    <div class="k-header k-grid-toolbar">-->
+<!--      <div class="k-header k-grid-toolbar">-->
+<!--        <a  class="k-button">-->
+<!--          {{'Insert'}}-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="card-body-table">-->
+<!--    <app-sama-table [dataSource]="termSchedules"-->
+<!--                    [displayColumnTypes]="displayColumnTypes"-->
+<!--                    [displayColumns]="displayColumns"-->
+<!--                    [displayDataSources]="displayDataSources"-->
+<!--                    [tableProperties]="tableProperties">-->
+<!--    </app-sama-table>-->
+<!--  </div>-->
+<!--</div>-->
