farhang irani 1402/02/07 part-1

--- a/src/app/module/dashboard/user-management/user-management.component.html
+++ b/src/app/module/dashboard/user-management/user-management.component.html
@@ -4,73 +4,37 @@
   </div>
   <div class="row">
     <div class="col-md-4">
-      <div class="row input-container">
-        <div class="col-md-3">
-          <label class="lable-text">نام کاربری :</label>
-        </div>
-        <div class="col-md-9 d-flex align-items-center align-content-center">
-          <input [(ngModel)]="userName" class="input-text" type="text">
-        </div>
-      </div>
+      <app-sama-input [(value)]="userName" [title]="'نام کاربری'" [type]="'text'" ></app-sama-input>
     </div>
   </div>
-  <div class="row px-2 py-2">
-    <div class="sama-table-container">
-      <div class="sama-table-header row mx-1">
-        <mat-toolbar style="background-color: #146C94;height: 50px;border-radius:4px">
-          <button (click)="onAddUserClicked()" aria-label="Example icon-button with menu icon "
-                  class="example-icon d-flex justify-content-between py-2 mx-1 border border-1"
-                  mat-button
-                  style="border-color: #67aae4;background-color: #19A7CE ; padding-top: 20px">
-            افزودن
-            <mat-icon>add</mat-icon>
-          </button>
-          <button (click)="onUpdateUserClicked()" aria-label="Example icon-button with menu icon "
-                  class="example-icon d-flex justify-content-between py-2 mx-1 border border-1"
-                  mat-button
-                  style="border-color: #67aae4;background-color: #19A7CE ; padding-top: 20px">
-            ویرایش
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button (click)="onDeleteUserClicked()" aria-label="Example icon-button with menu icon "
-                  class="example-icon d-flex justify-content-between py-2 mx-1 border border-1"
-                  mat-button
-                  style="border-color: #67aae4;background-color: #19A7CE ; padding-top: 20px">
-            حذف
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-toolbar>
+  <div class="row pt-2">
+    <div class="card-table">
+      <div class="card-header-table">
+        <div class="k-header k-grid-toolbar">
+          <div class="k-header k-grid-toolbar">
+            <a (click)="onAddUserClicked()"  class="k-button">
+              افزودن
+            28</a>
+            <a (click)="onUpdateUserClicked()"  class="k-button">
+              ویرایش
+            </a>
+            <a (click)="onDeleteUserClicked()"  class="k-button">
+              حذف
+            </a>
+          </div>
+        </div>
       </div>
-      <app-sama-table (onRowSelected)="onUserSelected($event)"
-                      [dataSource]="userList"
-                      [displayColumnTypes]="userDisplayColumnType"
-                      [displayColumns]="userDisplayColumn"
-                      [displayDataSources]="userDisplayDataSource"
-                      [isSelectable]="true">
-      </app-sama-table>
-
+      <div class="card-body-table">
+        <app-sama-table [dataSource]="userList"
+                        [displayColumnTypes]="userDisplayColumnType"
+                        [displayColumns]="userDisplayColumn"
+                        [displayDataSources]="userDisplayDataSource"
+                        [isSelectable]="true" >
+        </app-sama-table>
+      </div>
     </div>
-
   </div>
 </div>
 
 
-<!--<div class="card-table">-->
-<!--  <div class="card-header-table">-->
-<!--    <div class="k-header k-grid-toolbar">-->
-<!--      <div class="k-header k-grid-toolbar">-->
-<!--        <a  class="k-button">-->
-<!--          {{'Insert'}}-->
-<!--        </a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  <div class="card-body-table">-->
-<!--    <app-sama-table [dataSource]="termSchedules"-->
-<!--                    [displayColumnTypes]="displayColumnTypes"-->
-<!--                    [displayColumns]="displayColumns"-->
-<!--                    [displayDataSources]="displayDataSources"-->
-<!--                    [tableProperties]="tableProperties">-->
-<!--    </app-sama-table>-->
-<!--  </div>-->
-<!--</div>-->
+
