--- a/src/app/module/dashboard/add-user-group/add-user-group.component.html
+++ b/src/app/module/dashboard/add-user-group/add-user-group.component.html
@@ -1,1 +1,32 @@
-<p>add-user-group works!</p>
+<div class="h-100 w-100 bg-white">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button (click)="noAction()" aria-hidden="true" class="close" data-dismiss="modal" type="button">×</button>
+        <span
+          *ngIf="this.addUserGroupOptions.user=== undefined">افزودن</span>
+        <span
+          *ngIf="this.addUserGroupOptions.user!== undefined">ویرایش کاربر</span>
+      </div>
+    </div>
+  </div>
+  <mat-dialog-content class="mat-typography">
+    <div class="modal-body" style="position: relative;">
+      <div>
+
+      </div>
+    </div>
+  </mat-dialog-content>
+
+  <div class="dialog-footer">
+    <mat-dialog-actions align="end">
+      <app-sama-button (click)="onSubmitClicked()" [disabled]="false" [title]="'ذخیره'"
+                       class="col-md-2">ذخیره
+      </app-sama-button>
+      <app-sama-button (click)="noAction()" [disabled]="false" [title]="'انصراف'"
+                       class="col-md-2">انصراف
+      </app-sama-button>
+    </mat-dialog-actions>
+  </div>
+
+</div>
