--- a/src/app/module/dashboard/user-management/user-management.component.html
+++ b/src/app/module/dashboard/user-management/user-management.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col-md-4">
-      <app-sama-input [(value)]="userName" [title]="'نام کاربری'" [type]="'text'" ></app-sama-input>
+      <app-sama-input></app-sama-input>
     </div>
   </div>
   <div class="row pt-2">
