--- a/src/app/module/dashboard/add-user-group/add-user-group.component.html
+++ b/src/app/module/dashboard/add-user-group/add-user-group.component.html
@@ -10,23 +10,23 @@
       </div>
     </div>
   </div>
-  <mat-dialog-content class="mat-typography">
-    <div class="modal-body" style="position: relative;">
-      <div>
+  <!--  <mat-dialog-content class="mat-typography">-->
+  <!--    <div class="modal-body" style="position: relative;">-->
+  <!--      <div>-->
 
-      </div>
-    </div>
-  </mat-dialog-content>
+  <!--      </div>-->
+  <!--    </div>-->
+  <!--  </mat-dialog-content>-->
 
   <div class="dialog-footer">
-    <mat-dialog-actions align="end">
-      <app-sama-button (click)="onSubmitClicked()" [disabled]="false" [title]="'ذخیره'"
-                       class="col-md-2">ذخیره
-      </app-sama-button>
-      <app-sama-button (click)="noAction()" [disabled]="false" [title]="'انصراف'"
-                       class="col-md-2">انصراف
-      </app-sama-button>
-    </mat-dialog-actions>
+    <!--    <mat-dialog-actions align="end">-->
+    <!--      <app-sama-button (click)="onSubmitClicked()" [disabled]="false" [title]="'ذخیره'"-->
+    <!--                       class="col-md-2">ذخیره-->
+    <!--      </app-sama-button>-->
+    <!--      <app-sama-button (click)="noAction()" [disabled]="false" [title]="'انصراف'"-->
+    <!--                       class="col-md-2">انصراف-->
+    <!--      </app-sama-button>-->
+    <!--    </mat-dialog-actions>-->
   </div>
 
 </div>
